# SOAP-Spot-Oscillation-And-Planet-code

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
SOAP/: SOAP.py  __init__.py  classes.py  defaults.py  fast_starspot.py  gaussian.py  keplerian.py  parameters.py  plots.py  units.py  utils.py  visualizer.py
SOAP/__pycache__/: fast_starspot.calculate_ccf-1409.py313.1.nbc  fast_starspot.calculate_ccf-1409.py313.nbi  fast_starspot.calculate_ccf-1449.py313.1.nbc  fast_starspot.calculate_ccf-1449.py313.nbi  fast_starspot.calculate_ccf-1457.py313.1.nbc  fast_starspot.calculate_ccf-1457.py313.nbi  fast_starspot.doppler_shift-97.py313.1.nbc  fast_starspot.doppler_shift-97.py313.2.nbc  fast_starspot.doppler_shift-97.py313.3.nbc  fast_starspot.doppler_shift-97.py313.nbi  fast_starspot.doppler_shift-99.py313.1.nbc  fast_starspot.doppler_shift-99.py313.2.nbc  fast_starspot.doppler_shift-99.py313.3.nbc  fast_starspot.doppler_shift-99.py313.nbi  fast_starspot.doppler_shift_wave-81.py313.1.nbc  fast_starspot.doppler_shift_wave-81.py313.2.nbc  fast_starspot.doppler_shift_wave-81.py313.3.nbc  fast_starspot.doppler_shift_wave-81.py313.4.nbc  fast_starspot.doppler_shift_wave-81.py313.nbi  fast_starspot.doppler_shift_wave-92.py313.1.nbc  fast_starspot.doppler_shift_wave-92.py313.2.nbc  (+136 more)
docs/: index.md  install.md  reference.md
install/: index.html
notebooks/: jupiter_phoenix.npy
reference/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
(+15 files in other folders)
